Fix snap align to start

--- a/src/components/home/Section.module.css
+++ b/src/components/home/Section.module.css
@@ -1,5 +1,5 @@
 .section {
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   min-height: 100%;
   position: relative;
 }
